# dots-and-boxes

./: .clang-format  .gitignore  CMakeLists.txt  README.md
assets/shaders/default/box/: frag.glsl  vert.glsl
assets/shaders/default/dot/: frag.glsl  vert.glsl
assets/shaders/default/line/: frag.glsl  vert.glsl
assets/shaders/font/: frag.glsl  vert.glsl
src/: main.cpp
src/engine/: drawable.hpp  timer.cpp  timer.hpp
src/engine/drawable/: box.cpp  box.hpp  character.cpp  character.hpp  dot.cpp  dot.hpp  line.cpp  line.hpp  text.cpp  text.hpp
src/game/: game.cpp  game.hpp  state.hpp
src/game/state/: board_state.cpp  board_state.hpp  game_state.cpp  game_state.hpp  main_menu.cpp  main_menu.hpp  pvc_state.cpp  pvc_state.hpp  pvp_state.cpp  pvp_state.hpp  tmp_state.cpp  tmp_state.hpp
src/utils/: log.cpp  log.hpp
src/utils/ds/: board.cpp  board.hpp
src/utils/fs/: fs.cpp  fs.hpp
src/utils/gl/: gl.cpp  gl.hpp  shader_program.cpp  shader_program.hpp
